Closed Bug 945292 Opened 12 years ago Closed 12 years ago

Fix ANGLE compilation on mingw.

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: jacek, Assigned: jacek)

Details

(Whiteboard: [qa-] leave open)

Attachments

(2 files, 1 obsolete file)

Attached patch patch.diff (obsolete) — — Splinter Review
The last update of ANGLE broke mingw build. I fixed it upstream: https://codereview.appspot.com/13821044/ The fix also contains fix from angle-build-case-sensitive.patch in our tree, so I removed it. I didn't create a new .patch file, because it won't be needed when updating to recent version. Let me know if you want that in tree anyways.
Attachment #8341124 - Flags: review?(bjacob)
Attachment #8341124 - Flags: review?(bjacob) → review?(jgilbert)
Attached patch Makefile.in part — — Splinter Review
Makefile.in part. Other than using SSE2 for ImageSSE2.cpp, this avoids overrding OS_COMPILE_CFLAGS and OS_COMPILE_CXXFLAGS. The problem is that those contain arguments for generating .pp files, which are needed for mingw compilation. I don't see any harm in having MOZILLA_CLIENT defined here.
Attachment #8341153 - Flags: review?(mh+mozilla)
Comment on attachment 8341153 [details] [diff] [review] Makefile.in part Review of attachment 8341153 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/angle/src/libEGL/Makefile.in @@ +13,5 @@ > # mozilla-config.h and -DMOZILLA_CLIENT automatically included and defined, so > # we just overwrite OS_COMPILE_C(XX)FLAGS. > OS_COMPILE_CFLAGS = $(OS_CPPFLAGS) > OS_COMPILE_CXXFLAGS = $(OS_CPPFLAGS) > +endif Just remove those four lines.
Attachment #8341153 - Flags: review?(mh+mozilla) → review+
OK, pushed with those removed. Thanks for review. https://hg.mozilla.org/integration/mozilla-inbound/rev/32ad0b1d8a3f
Whiteboard: leave open
Comment on attachment 8341124 [details] [diff] [review] patch.diff Review of attachment 8341124 [details] [diff] [review]: ----------------------------------------------------------------- We do need a record of this change in the tree, in case we don't upgrade all the way to tip. ::: gfx/angle/angle-build-case-sensitive.patch @@ -1,5 @@ > -From: Jeff Gilbert <jgilbert@mozilla.com> > -* * * > -Bug 840577 - Fix ANGLE cross compilation on case sensitive OSes, relanded > - > -diff --git a/gfx/angle/src/libGLESv2/precompiled.h b/gfx/angle/src/libGLESv2/precompiled.h This is a non-sensical change. You can see this patch applied if you check 'precompiled.h'.
Attachment #8341124 - Flags: review?(jgilbert) → review-
This version adds a patch file to the tree.
Attachment #8341124 - Attachment is obsolete: true
Attachment #8365572 - Flags: review?(jgilbert)
Attachment #8365572 - Flags: review?(jgilbert) → review+
Attachment #8365572 - Flags: checkin?
Attachment #8341153 - Flags: checkin+
Attachment #8365572 - Flags: checkin? → checkin+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: leave open → [qa-] leave open
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: