Bug 945292 - Fixed ANGLE compilation on mingw. r=jgilbert